--- a/myst.yml
+++ b/myst.yml
@@ -12,6 +12,7 @@ project:
     - file: install-ct.md
     - file: llm-builtin.md
     - file: state.md
+    - file: state_advanced.md
     - file: cts.md    
 
 site:
